# rr_channel

./: .gitignore  1  2  Cargo.toml  DEL.rs  README.md  hello.txt  logs.txt  rec.rs  run_examples_as_tests.py
benches/: channels_benchmark.rs
examples/: after_always_timesout.rs  after_timeout_50_50.rs  benchmark.rs  block_forever.rs  bounded.rs  channel_select.rs  channel_select_disconnect.rs  channel_select_no_disconnect.rs  crossbeam.rs  ipc.rs  ipc_multiple_messages.rs  ipc_router_out_of_order.rs  ipc_select.rs  ipc_select_mpsc.rs  ipc_select_out_of_order.rs  many_threads.rs  minimal.rs  mpsc_multiple_messagers.rs  mpsc_multiple_producers.rs  mpsc_multiple_producers_many_threads.rs  mpsc_ring_topology.rs  mpsc_shared_usage.rs  mpsc_simple.rs  multiple_producers.rs  multiple_producers_ipc.rs  multiple_producers_ipc_many_threads.rs  multiple_producers_no_select.rs  multiple_producers_random_delays.rs  never_50_50.rs  never_50_50_failure_expected.rs  recv_timeout.rs  recv_timeout_multiple_producers.rs  ring_topology.rs  router.rs  router_add_route.rs  router_add_route2.rs  router_add_route3.rs  router_mpsc.rs  router_route_ipc_receiver_to_crossbeam_sender.rs  router_route_ipc_receiver_to_new_crossbeam_receiver.rs  (+6 more)
old_examples/: after_timeout_50_50.rs  channel_select_no_disconnect.rs  ipc_multiple_messages.rs  ipc_select_mpsc.rs  ipc_select_out_of_order.rs  mpsc_multiple_messagers.rs  mpsc_shared_usage.rs  multiple_producers.rs  multiple_producers_random_delays.rs  never_50_50_failure_expected.rs  select_from_thread.rs  simple_ipc_select.rs  try_recv.rs
recordlogs/: crossbeam.txt  ipc.txt
src/: channel.rs  channels.rs  crossbeam.rs  crossbeam_channel.rs  crossbeam_select.rs  crossbeam_select_macro.rs  desync.rs  det_id.rs  detthread.rs  error.rs  ipc.rs  lib.rs  main.rs  mpsc.rs  parse_recordlog.rs  record_replay.rs  recordlog.rs  router.rs  rr.rs  select.rs  test.rs  thread.rs  thread_tree.rs  (+1 more)
(+5 files in other folders)
