[package]
name = "rr_channel"
version = "0.1.0"
authors = ["gatowololo"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.3"
lazy_static = "1.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ipc-channel = { git = "https://github.com/gatoWololo/ipc-channel"}
bincode = "1"

[dev-dependencies]
env_logger = "0.7.1"
rand = "0.7.3"
anyhow = "1.0"
rusty-fork = { git = "https://github.com/daxpedda/rusty-fork/", rev = "84cb492c2e39f57022e64172d0a97c4305a0c242"}