[package]
name = "rr_channel"
version = "0.1.0"
authors = ["gatowololo"]
edition = "2018"

[[bin]]
name = "parse_recordlog"
path = "src/parse_recordlog.rs"

[dependencies]
crossbeam-channel = "0.3"
lazy_static = "1.3"
serde = { version = "1.0", features = ["derive"] }
ron = "0.6"
ipc-channel = { git = "https://github.com/gatoWololo/ipc-channel"}
bincode = "1"
tracing = "0.1.25"
tracing-subscriber = "0.2"
thiserror = "1.0"
once_cell = "1.4"
anyhow = "1.0"

# Bin dependencies. Separate somehow?
structopt = "0.3"

[dev-dependencies]
once_cell = "1.7"
env_logger = "0.7.1"
rand = "0.8.4"
anyhow = "1.0"
rusty-fork = { git = "https://github.com/daxpedda/rusty-fork/", rev = "84cb492c2e39f57022e64172d0a97c4305a0c242"}
